performance progress docs